# Ecommerce-Chatbot

./: .gitignore  README.md  main.py  pyproject.toml
app/: faq.py  main.py  router.py  small_talk.py  sql.py
app/resources/: ecommerce_data.db
web-scrapping/: csv_to_sqlite.py
