[project]
name = "project-ecommerce-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "groq>=1.0.0",
    "pandas>=2.3.3",
    "semantic-router[qdrant]>=0.1.12",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
]
